--- a/server-side/package.json
+++ b/server-side/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "mysql2": "^3.10.0"
+    "mysql2": "^3.10.0",
+    "nodemon": "^3.1.3"
   }
 }
