--- a/server-side/.env
+++ b/server-side/.env
@@ -2,5 +2,5 @@ NODE_PORT=3000
 DB_PORT=3306
 NODE_ENV=development
 DB_HOST=localhost
-DB_PASSWORD="556260982"
+DB_PASSWORD="chavi2804"
 DB_NAME="SurveyManagement"
