--- a/client-side/package.json
+++ b/client-side/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
