--- a/server-side/.env
+++ b/server-side/.env
@@ -2,6 +2,6 @@ NODE_PORT=3000
 DB_PORT=3306
 NODE_ENV=development
 DB_HOST=localhost
-DB_PASSWORD="chavi2804"
+DB_PASSWORD="mysql24"
 DB_NAME="SurveyManagement"
 JWT_SECRET="1234"
