--- a/client-side/package.json
+++ b/client-side/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "npm run dev",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -15,6 +16,8 @@
     "bootstrap": "^5.3.3",
     "cookie-parser": "^1.4.6",
     "js-cookie": "^3.0.5",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
