--- a/client-side/package.json
+++ b/client-side/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-range": "^1.8.14",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
