--- a/client-side/package.json
+++ b/client-side/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.3",
     "cookie-parser": "^1.4.6",
     "js-cookie": "^3.0.5",
     "primeicons": "^7.0.0",
