--- a/client-side/package.json
+++ b/client-side/package.json
@@ -18,6 +18,8 @@
     "chart.js": "^4.4.3",
     "cookie-parser": "^1.4.6",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "primeicons": "^7.0.0",
     "primereact": "^10.7.0",
     "react": "^18.2.0",
